Finish Sign In Interface

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+    //General
+    <color name="colorPrimary">#519bff</color>
+    <color name="colorPrimaryDark">#519bff</color>
+    <color name="colorAccent">#519bff</color>
+
+    //Background
+    <color name="backgroundApp">#ffffff</color>
+
+    //Button
+    <color name="colorTransparent">#00000000</color>
+
+    //Text
+    <color name="textColorPrimaryDark">#2c2c2c</color>
+    <color name="textColorPrimary">#4b4b4c</color>
+    <color name="textColorAccent">#808080</color>
+
 </resources>
