--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,23 +116,40 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <CheckBox
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="13dp"
-            android:fontFamily="@font/mm"
-            android:hint="REMEMBER ME!"
-            android:textColor="@color/textColorPrimaryDark"
-            android:textColorHint="@color/textColorPrimary"
-            android:textSize="15sp" />
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp">
+
+            <TextView
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/mr"
+                android:hint="Remember me!"
+                android:textColor="@color/textColorPrimaryDark"
+                android:textSize="15sp" />
+
+            <CheckBox
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </RelativeLayout>
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/bgbtnsignin"
             android:fontFamily="@font/mm"
@@ -157,15 +174,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mr"
-                android:text="Don't have an account yet? "
-                android:textColor="@color/textColorAccent" />
+                android:text="Forgot password? "
+                android:textColor="@color/colorPrimary" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mr"
-                android:text="Forgot password?"
-                android:textColor="@color/colorPrimary" />
+                android:text="Don't have an account yet?"
+                android:textColor="@color/textColorAccent" />
+
 
         </LinearLayout>
 
